--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 VignetteBuilder: knitr, rmarkdown
 Imports:
-    dplyr, ggplot2
+    dplyr, tidyr, ggplot2, preprocessCore
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
